--- a/QL_CDC-master/QL_CDC/Views/GioHang/GioHang.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/GioHang/GioHang.cshtml
@@ -60,7 +60,7 @@
                 </table>
             </div>
             <div class="col-lg-4">
-                <form class="mb-5" action="">
+                @*<form class="mb-5" action="">
                     <div class="input-group" style="z-index: 0">
                         <input type="text" class="form-control p-4" placeholder="Mã khuyến mãi">
                         <br />
@@ -68,7 +68,7 @@
                             <button class="btn btn-primary">Áp dụng</button>
                         </div>
                     </div>
-                </form>
+                </form>*@
                 <div class="card border-secondary mb-5">
                     <div class="card-header bg-secondary border-0">
                         <h4 class="font-weight-semi-bold m-0">Tổng</h4>
