--- a/QL_CDC-master/QL_CDC/Views/SanPham/Index.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/Index.cshtml
@@ -114,12 +114,12 @@
     string giagoc = string.Format("{0:#,##0.########}", item.giagocsp);
     var sosao = Math.Round(item.danhgiasp, 0, MidpointRounding.AwayFromZero);
 <div class="col-lg-3 col-md-6 col-sm-12 pb-1" style="margin: 0px">
-    <div class="card product-item mb-4 sanpham" style="width: 105%">
-        <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-            @*<div style="width: 100%; display: flex;">
-                <div class="tagthoigian">@item.thoigiansp tháng</div>
-                <div class="tagthoigian">@sosao <i class="fa fa-star" style="color: white;"></i></div>
-            </div>*@
+    <div class="card product-item mb-4" style="width: 105%">
+        <div class="card-header product-img position-relative overflow-hidden bg-transparent ">
+            <div style="width: 100%; display: flex;">
+                <div class=""><i class="fa fa-calendar" aria-hidden="true"></i>  @item.ngaydangsp </div>
+                @*<div class="tagthoigian">@sosao <i class="fa fa-star" style="color: white;"></i></div>*@
+            </div>
             <img class="img-fluid w-100" src="@item.anhsp[0]" alt="">
         </div>
         <div class="card-body border-left border-right text-center p-0 pt-2 pb-1">
