--- a/QL_CDC-master/QL_CDC/Views/Shared/_LoginPartial.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_LoginPartial.cshtml
@@ -46,7 +46,7 @@
             </ul>
         </li>
     </ul>
-    <a href="@Url.Action("DanhSachHoaDonNguoiMua","HoaDon")" class="nav-item nav-link dndk">Đơn hàng <i class="fa fa-file-text"></i></a>
+    <a href="@Url.Action("DanhSachHoaDonNguoiMua","HoaDon")" class="nav-item nav-link dndk">Đơn hàng mua <i class="fa fa-file-text"></i></a>
 
     
 </div>
