--- a/QL_CDC-master/QL_CDC/Views/HoaDon/ChiTietHoaDonBan.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/HoaDon/ChiTietHoaDonBan.cshtml
@@ -115,9 +115,10 @@
             @if (TT == 1)
             {
         <div class="table-themsanpham" style="margin-top:-2vh;">
-            <div class="btnaddfile" style="width:40%" onclick="XacNhan('@MSHD')">Xác nhận đơn hàng</div>
             <div style="width:20%"></div>
-            <div class="btnHuy" style="width:40%" onclick="Huy('@MSHD')">Hủy đơn hàng</div>
+            <div class="btnaddfile" style="width:60%" onclick="XacNhan('@MSHD')">Xác nhận đơn hàng</div>
+            <div style="width:20%"></div>
+            @*<div class="btnHuy" style="width:40%" onclick="Huy('@MSHD')">Hủy đơn hàng</div>*@
         </div>
             }
             else if (TT == 2)
@@ -132,7 +133,7 @@
             {
                 <div class="table-themsanpham" style="margin-top:-2vh;">
                     <div style="width:20%"></div>
-                    <div class="btnaddfile" style="width:60%" onclick="XacNhan('@MSHD')">Xác nhận đang giao hàng</div>
+                    <div class="btnaddfile" style="width:60%" onclick="XacNhan('@MSHD')">Xác nhận đã giao cho shipper</div>
                     <div style="width:20%"></div>
                 </div>
             }
