--- a/QL_CDC-master/QL_CDC/Views/SanPham/PhuongTien.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/PhuongTien.cshtml
@@ -103,7 +103,7 @@
     </div>
     <br />
     <div>
-        <h4 style="margin-left:12px"><label>Bài đăng dành cho xe</label></h4>
+        <h4 style="margin-left:12px"><label>Xe cộ</label></h4>
     </div>
     <div class="row px-xl-5 pb-3">
         @if (Model.Count() > 0)
@@ -113,32 +113,32 @@
     string dongia = string.Format("{0:#,##0.########}", item.dongiasp);
     string giagoc = string.Format("{0:#,##0.########}", item.giagocsp);
     var sosao = Math.Round(item.danhgiasp, 0, MidpointRounding.AwayFromZero);
-<div class="col-lg-3 col-md-6 col-sm-12 pb-1" style="margin: 0px">
-    <div class="card product-item mb-4 sanpham" style="width: 105%">
-        <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-            <div style="width: 100%; display: flex;">
-                <div class="tagthoigian">@item.thoigiansp tháng</div>
-                <div class="tagthoigian">@sosao <i class="fa fa-star" style="color: white;"></i></div>
+        <div class="col-lg-3 col-md-6 col-sm-12 pb-1" style="margin: 0px">
+            <div class="card product-item mb-4" style="width: 105%">
+                <div class="card-header product-img position-relative overflow-hidden bg-transparent ">
+                    <div style="width: 100%; display: flex;">
+                        <div class=""><i class="fa fa-calendar" aria-hidden="true"></i>  @item.ngaydangsp </div>
+                        @*<div class="tagthoigian">@sosao <i class="fa fa-star" style="color: white;"></i></div>*@
+                    </div>
+                    <img class="img-fluid w-100" src="@item.anhsp[0]" alt="">
+                </div>
+                <div class="card-body border-left border-right text-center p-0 pt-2 pb-1">
+                    <h6 class="text-truncate mb-3"> <b>@item.tensp</b> </h6>
+                    <div class="d-flex justify-content-center">
+                        @if (item.giagocsp == item.dongiasp)
+                        {
+        <h6><b>@dongia</b> </h6> }
+    else
+    {
+        <h6><b>@dongia</b> </h6><h6 class="text-muted ml-2"><del>@giagoc </del></h6>}
+                    </div>
+                </div>
+                <div class="card-footer d-flex justify-content-between bg-light border">
+                    <a asp-action="ChiTietSanPham" asp-controller="SanPham" asp-route-id="@item.masp" class="btn btn-sm text-dark p-0 tuychon"><i class="fas fa-eye text-primary mr-1"></i>Chi tiết</a>
+                    <a onclick="Them1VaoGio('@item.masp')" class="btn btn-sm text-dark p-0 tuychon"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm vào giỏ</a>
+                </div>
             </div>
-            <img class="img-fluid w-100" src="@item.anhsp[0]" alt="">
-        </div>
-        <div class="card-body border-left border-right text-center p-0 pt-2 pb-1">
-            <h6 class="text-truncate mb-3"> <b>@item.tensp</b> </h6>
-            <div class="d-flex justify-content-center">
-                @if (item.giagocsp == item.dongiasp)
-                {
-<h6><b>@dongia</b> </h6> }
-else
-{
-<h6><b>@dongia</b> </h6><h6 class="text-muted ml-2"><del>@giagoc </del></h6>}
-            </div>
-        </div>
-        <div class="card-footer d-flex justify-content-between bg-light border">
-            <a asp-action="ChiTietSanPham" asp-controller="SanPham" asp-route-id="@item.masp" class="btn btn-sm text-dark p-0 tuychon"><i class="fas fa-eye text-primary mr-1"></i>Chi tiết</a>
-            <a onclick="Them1VaoGio('@item.masp')" class="btn btn-sm text-dark p-0 tuychon"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm vào giỏ</a>
-        </div>
-    </div>
-</div>}}
+        </div>}}
     </div>
 
 </div>
