--- a/QL_CDC-master/QL_CDC/Views/Shared/AdminLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/AdminLayout.cshtml
@@ -100,7 +100,7 @@
                         <span class="menu-header-text">Tùy chọn</span>
                     </li>
                     <li class="menu-item">
-                        <a href="" class="menu-link">
+                        <a href="@Url.Action("TongQuan","Admin")" class="menu-link">
                             <i class="menu-icon tf-icons bx bx-home-circle"></i>
                             <div data-i18n="Analytics">Tổng quan Admin</div>
                         </a>
